--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -1,5 +1,7 @@
 \documentclass{scrartcl}
 
+\usepackage{hyperref}
+
 \title{Dokumentation Projekt Inforamtionsvisualisierung}
 \subtitle{Flying Etiquette}
 \author{Kevin Angermeyer \\ \and Lydia Güntner \\ \and Maximiliane Windl}
@@ -8,6 +10,78 @@
 \begin{document}
 \maketitle
 \section{Datensatz}
+Bei dem Datensatz handelt es sich um den Datensatz \textit{flying-etiquette-survey} von \textit{\href{https://github.com/fivethirtyeight/data/tree/master/flying-etiquette-survey}{fivethirtyeight}}. Die Daten stammen aus einer Online-Umfrage, welche mit \href{https://www.surveymonkey.com/mp/audience/}{SurveyMonkey}, am 29. und 30. August 2014 durchgeführt wurde. Insgesamt nahmen 1040 Probanden an der Studie teil. Nach einer Säuberung der Daten, bei der alle Teilnehmer die angaben nie zu fliegen und daher die anderen Fragen zum Thema Fliegen nicht beantwortet hatten, entfernt wurden, blieben Daten von 856 Probanden übrig. 
+\newline \newline
+Anschließend wurde der Datensatz in verschiedene Kategorien aufgeteilt, denen folgende Fragen zugeordnet wurden:
+\begin{enumerate}
+
+\item demografischen Fragen:
+\begin{itemize}
+\item Gender
+\item Age
+\item Household income
+\item Education 
+\item Location
+\item How tall are you? 
+\item How often do you travel by plane? 
+\newline \newline
+\end{itemize}
+
+
+\item auf Kinder bezogene Fragen:
+\begin{itemize}
+\item Do you have any children under 18?
+\item In general, is it rude to bring a baby on a plane?
+\item In general, is it rude to knowingly bring unruly children on a plane? 
+\newline \newline
+\end{itemize}
+
+
+\item auf das Zurücklehnen der Sitze bezogene Fragen: 
+\begin{itemize}
+\item Is it rude to recline your seat on a plane? 
+\item Under normal circumstances, does a person who reclines their seat during a flight have any obligation to the person sitting behind them? 
+\item Given the opportunity, would you eliminate the possibility of reclining seats on planes entirely?
+\newline \newline
+\end{itemize}
+
+
+\item auf den Sitzplatz bezogene Fragen: 
+\begin{itemize}
+\item In a row of three seats, who should get to use the two arm rests? 
+\item In a row of two seats, who should get to use the middle arm rest?
+\item Who should have control over the window shade?
+\newline \newline
+\end{itemize}
+
+
+\item auf das Tauschen von Sitzplätzen bezogene Fragen: 
+\begin{itemize}
+\item Is it rude to ask someone to switch seats with you in order to be closer to friends?
+\item Is it rude to ask someone to switch seats with you in order to be closer to family?
+\item Is it rude to move to an unsold seat on a plane? 
+\newline \newline
+\end{itemize}
+
+
+\item auf die Kommunikation mit anderen Fluggästen bezogene Fragen:
+\begin{itemize}
+\item Generally speaking, is it rude to say more than a few words to the stranger sitting next to you on a plane?
+\item On a 6 hour flight from NYC to LA, how many times is it acceptable to get up if you're not in an aisle seat?
+\item Is it rude to wake a passinger up if you are trying to go to the bathroom?
+\item Is it rude to wake a passenger up if you are trying to walk around?
+\newline \newline
+\end{itemize}
+
+
+\item auf im Flugzeug verbotene Dinge bezogene Fragen:
+\begin{itemize}
+\item Have you ever used personal electronics during take off or landing in violation of a flight attendant's direction?
+\item Have you ever smoked a cigarette in an airplane bathroom when it was against the rules? 
+\end{itemize}
+
+
+\end{enumerate}
 
 \section{Startdiagramm}
 
