--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -9,7 +9,7 @@
 
 \begin{document}
 \maketitle
-\section{Datensatz}
+\section{Datensatz} \label{Datensatz}
 Bei dem Datensatz handelt es sich um den Datensatz \textit{flying-etiquette-survey} von \textit{\href{https://github.com/fivethirtyeight/data/tree/master/flying-etiquette-survey}{fivethirtyeight}}. Die Daten stammen aus einer Online-Umfrage, welche mit \href{https://www.surveymonkey.com/mp/audience/}{SurveyMonkey}, am 29. und 30. August 2014 durchgeführt wurde. Insgesamt nahmen 1040 Probanden an der Studie teil. Nach einer Säuberung der Daten, bei der alle Teilnehmer die angaben nie zu fliegen und daher die anderen Fragen zum Thema Fliegen nicht beantwortet hatten, entfernt wurden, blieben Daten von 856 Probanden übrig. 
 \newline \newline
 Anschließend wurde der Datensatz in verschiedene Kategorien aufgeteilt, denen folgende Fragen zugeordnet wurden:
@@ -85,7 +85,10 @@ Anschließend wurde der Datensatz in verschiedene Kategorien aufgeteilt, denen f
 
 \section{Startdiagramm}
 
-\section{Bubble-Diagramme}
+\section{Bubblediagramme}
+Nachdem das Startdiagramm einen Überblick über die Daten geben sollte, geben die Bubblediagramme die Möglichkeit die in \ref{Datensatz} beschriebenen Kategorien genauer zu erforschen.
+
+Dafür wurde für jede Kategorie eine eigene Unterseite erstellt. Auf den Unterseiten befinden sich jeweils zwei bis drei Bubblediagramme, welche Fragen der Kategorien repräsentieren. Jede Bubble ist dabei eine Antwort die auf die jeweilige Frage geben wurde. 
 
 \section{Aufteilung}
 
