added Filter description to docu

--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -90,6 +90,75 @@ Nachdem das Startdiagramm einen Überblick über die Daten geben sollte, geben d
 
 Dafür wurde für jede Kategorie eine eigene Unterseite erstellt. Auf den Unterseiten befinden sich jeweils zwei bis drei Bubblediagramme, welche Fragen der Kategorien repräsentieren. Jede Bubble ist dabei eine Antwort die auf die jeweilige Frage geben wurde. 
 
+\subsection{Filter}
+Die Bubblediagramme können mit Hilfe von Filtern verändert werden. Diese befinden sich jeweils links der Diagramme.
+
+Wenn Filter ausgewählt werden, passen sich die Bubbles so an, dass sie nur noch die Zahl der Testpersonen repräsentieren, auf die die ausgewählten Filtermöglichkeiten zutreffen.
+
+Als Standardfilter stehen allen Diagrammen folgende Filter zur Verfügung:
+\begin{itemize}
+\item Gender-Filter: Mit dem Gender-Filter kann nach dem Geschlecht, also nach männlich oder weiblich gefiltert werden.
+\item FrequencyOfAirTravel-Filter: Mit dem FrequencyOfAirTravel-Filter kann nach der Häufigkeit, mit der die Testpersonen fliegen gefiltert werden. Zur Auswahl stehen: 
+	\begin{itemize}
+	\item Once a year or less
+	\item Once a month or less
+	\item A few times per month
+	\item A few times per week
+	\item Every day
+	\end{itemize}
+\item Age-Filter: Mit dem Age-Filter kann nach dem Alter der Testpersonen gefiltert werden. Zu Auswahl stehen: 
+	\begin{itemize}
+	\item 18 - 29
+	\item 30 - 44
+	\item 45 - 60
+	\item > 60
+	\end{itemize}
+\item Income-Filter: Mit dem Income-Filter kann nach dem Jahreseinkommen der Testpersonen gefiltert werden. Zur Auswahl stehen: 
+	\begin{itemize}
+	\item \$0 - \$24,999
+	\item \$25,000 - \$49,999
+	\item \$50,000 - \$99,999
+	\item \$100,000 - \$149,999
+	\item \$150000
+	\end{itemize}
+\item Education-Filter: Mit dem Education-Filter kann nach dem höchsten Bildungsabschluss der Testpersonen gefiltert werden: Zur Auswahl stehen:
+	\begin{itemize}
+	\item High school degree
+	\item Some college or Associate degree
+	\item Graduate degree
+	\item Bachelor degree
+	\end{itemize}
+\item Location-Filter: Mit dem Location-Filter kann nach der Region der USA, aus der die Testpersonen kommen gefiltert werden. Zur Auswahl stehen:
+	\begin{itemize}
+	\item New England
+	\item East North Central
+	\item East South Central
+	\item West North Central
+	\item West South Central
+	\item Middle Atlantic
+	\item South Atlantic
+	\item Mountain
+	\item Pacific
+	\end{itemize}
+\end{itemize}
+
+Zusätzlich zu den Standardfiltern stehen auf zwei Unterseiten Sonderfilter zur Verfügung. 
+
+Auf der Unterseite \textit{Children} ein Child-Filter, mit dem danach gefiltert werden kann, ob die Testpersonen mindestens ein Kind unter 18 Jahren haben. 
+
+Auf der Unterseite \textit{Seat Reclining} stehen folgende zwei Sonderfilter zur Verfügung: 
+\begin{itemize}
+\item FrequencyOfeatReclining-Filter: Mit dem FrequencyOfeatReclining-Filter kann nach der Häufigkeit mit der die Testpersonen ihren Sitz zurücklehnen gefiltert werden. Zur Auswahl stehen:
+	\begin{itemize}
+	\item Never
+	\item Once in a while
+	\item About half the time
+	\item Usually
+	\item Always
+	\end{itemize}
+\item Height-Filter: Mit dem Height-Filter kann nach der Größe der Testpersonen gefiltert werden. Dabei können auf einem Slider Größen vom 5 Fuß bis größer als 6 Fuß und 6 Zoll gesetzt werden.
+\end{itemize} 
+
 \section{Aufteilung}
 
 
