added MI template for documentation

--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -1,4 +1,4 @@
-\documentclass{scrartcl}
+\documentclass{mi-seminar}
 
 \usepackage{hyperref}
 
@@ -7,8 +7,27 @@
 \author{Kevin Angermeyer \\ \and Lydia Güntner \\ \and Maximiliane Windl}
 
 
+
+\title{Flying Etiquette}
+\author{Kevin Angermeyer, Lydia Güntner, Maximiliane Windl}
+\semester{SS18}
+\course{Projektseminar Mediengestaltung I: Informationsvisualisierung}
+\module{MEI-M05.3 }
+\dozent{Florin Schwappach}
+\studid{[Matrikelnummer Kevin], 1785088, 1770307}
+\studSemester{6. Semester B.A. Medieninformatik / Informationswissenschaft}
+
+
+%\address{Domplatz 1, 93047 Regensburg}{} % Optional
+\mail{kevin.angermeyer@stud.uni-regensburg.de, lydia-maria.guentner@stud.uni-regensburg.de, maximiliane.windl@stud.uni-regensburg.de}
+
+
+
+
 \begin{document}
+
 \maketitle
+
 \section{Das Projekt starten} \label{Das Projekt starten}
 \subsection{Unix}
 \textbf{Was wird benötigt?}\newline
