--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -3,7 +3,7 @@
 \usepackage{hyperref}
 
 \title{Flying Etiquette}
-\subtitle{Dokumentation zum Projekt Inforamtionsvisualisierung}
+%\subtitle{Dokumentation zum Projekt Informationsvisualisierung}
 \author{Kevin Angermeyer \\ \and Lydia Güntner \\ \and Maximiliane Windl}
 
 
