--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -14,7 +14,7 @@
 \course{Projektseminar Mediengestaltung I: Informationsvisualisierung}
 \module{MEI-M05.3 }
 \dozent{Florin Schwappach}
-\studid{[Matrikelnummer Kevin], 1785088, 1770307}
+\studid{1796468, 1785088, 1770307}
 \studSemester{6. Semester B.A. Medieninformatik / Informationswissenschaft}
 
 
@@ -69,6 +69,7 @@ Anschließend wurde der Datensatz in verschiedene Kategorien aufgeteilt, denen f
 
 \item auf das Zurücklehnen der Sitze bezogene Fragen: 
 \begin{itemize}
+\item Do you ever recline your seat when you fly?
 \item Is it rude to recline your seat on a plane? 
 \item Under normal circumstances, does a person who reclines their seat during a flight have any obligation to the person sitting behind them? 
 \item Given the opportunity, would you eliminate the possibility of reclining seats on planes entirely?
@@ -114,6 +115,40 @@ Anschließend wurde der Datensatz in verschiedene Kategorien aufgeteilt, denen f
 \end{enumerate}
 
 \section{Startdiagramm}
+Das Startdiagramm soll dem Nutzer ermöglichen, selbstständig sowie umfassend den Datensatz zu erkunden. Es besteht aus mehreren einzelnen Diagrammen, die zusammen als eine svg-Datei auf der Startseite dargestellt werden. Dadurch kann man auf einen Blick mehrere Aspekte des Datensatzes visuell abbilden. Ferner kann der Nutzer somit ohne Umwege mit einem Großteil der Daten interagieren. Der Unterschied zu den Bubble-Diagrammen auf den Unterseiten besteht darin, dass im Startdiagramm alle Aspekte des Datensatzes dargestellt werden, der Detailgrad und die Filteroptionen sind allerdings nicht in dem gleichen Ausmaß gegeben. Insgesamt besteht das Startdiagramm aus vier Segmenten (Äußerer Ring, Innerer Ring, Teilnehmer-Kreise und Info-Box), die zur besseren Übersicht in diesem Text einzeln erläutert werden. Des Weiteren werden die Interaktionsmöglichkeiten  mit dem Startdiagramm ebenfalls im Detail erläutert.
+
+\subsection{Äußerer Ring}
+Der äußere Ring wird durch ein Donut-Diagramm visualisiert und repräsentiert alle Fragen, welche die Teilnehmer der Studie beantworten sollten. Insgesamt 26 Fragen, die in \ref{Datensatz} nach den einzelnen Kategorien aufgelistet sind, wurden den Probanden gestellt. Jede Frage wird hierbei als ein Segment des äußeren Rings dargestellt. Jedes dieser Segmente erhält dabei zusätzlich noch eine Farbe, die abhängig von der Kategorie ist, in welche die Frage eingeordnet wurde. So sind z.B. alle auf Kinder bezogenen Segmente orange, während die demographischen Fragen hellblau sind. Fragen der gleichen Kategorie haben einen leicht anderen Farbton, um diese voneinander zu unterscheiden. 
+
+Der äußere Ring hilft dem Nutzer auf einen Blick alle Fragen, sowie deren dazugehörige Kategorie mithilfe der Farben, zu sehen. Somit ist es möglich, sich ein gutes erstes Bild über die Daten zu verschaffen und es hilft später bei der Zuordnung der Fragen zu den Antworten im inneren Ring. 
+
+\subsection{Innerer Ring}
+Der innere Ring wird, genau wie der äußere Ring, durch ein Donut-Diagramm visualisiert, jedoch zeigt dieser nicht die Fragen, sondern alle Antworten, an, die von den Probanden gegeben wurden. Die Größe der einzelnen Segmente hängt dabei davon ab, wie viele Testpersonen gleich geantwortet haben. Die Summe aller Antworten ergibt dabei die Gesamtanzahl der Probanden, also 1040. Gleichermaßen entsprechen alle Segmente des inneren Rings der Größe des Segments des äußeren Rings, das die übergeordnete Frage zu den Antworten darstellt. Aus diesem Grund werden die zusammengehörenden Segmente beider Ringe direkt untereinander gezeichnet und beide haben die gleiche Farbe. Einzelne Antworten können später angeklickt werden und ändern dabei deren Farbe, um dem Nutzer mitzuteilen, dass dieses Segment des inneren Rings gerade ausgewählt wurde und aktiv ist. 
+
+Der visuelle Vorteil beim inneren Ring ist die Darstellung aller möglichen Antworten für jede der 26 Fragen. Beliebte oder unbeliebte Antworten sowie häufig auftretende demographische Werte werden durch die Größe der Segmente, die an die Häufigkeit der Antworten gebunden ist, schnell und leicht ersichtlich. Dies ermöglicht es später beim Auswählen von verschiedenen Antworten, um zu sehen, wie viele Probanden eine bestimmte Kombination von Antworten gegeben haben, häufige oder seltene Antworten beliebig miteinander zu kombinieren und zu vergleichen, wie sich diese aufeinander auswirken. Dabei bleibt es dem Nutzer überlassen, ebenso nur häufige oder nur seltene Antworten auszuwählen. Durch die Platzierung unter den Fragen vom inneren Ring ist immer ein visueller Zusammenhang zwischen dem äußeren und dem inneren Ring für den Nutzer ersichtlich.
+
+\subsection{Teilnehmer-Kreise}
+In der Mitte des inneren Rings steht ein großer Kreis, der mehrere kleinere farbige Kreise enthält. Jeder Einzelne repräsentiert einen Probanden und dessen Antworten, die er im Zuge der Studie gegeben hat. Die Anzahl der Kreise (856) deckt sich dabei mit der Anzahl an Probanden. Der umschließende Kreis gruppiert dabei alle Teilnehmer-Kreise und ermöglicht es, dieser Gruppe an Kreisen eine Hintergrund-Farbe zu geben. Die Teilnehmer-Kreise selbst sind entweder hellblau oder dunkelblau, je nachdem, ob sie gerade aktiv sind oder nicht.
+
+Die Anzahl der Teilnehmer-Kreise soll verdeutlichen, wie viele Probanden an dieser Studie teilgenommen haben und unterstreicht in diesem Fall darüber hinaus die doch umfassende Anzahl an Befragten. Außerdem werden durch die Platzierung in der Mitte diese Kreise besser hervorgehoben, wenn sie als aktiv gesetzt und somit hellblau sind, im Kontrast zu den dunkelblauen inaktiven Kreisen. Es ist aufgrund der Masse an Kreisen und somit Probanden hilfreich, die Unterschiede direkt vor sich zu haben. 
+
+\subsection{Info-Box}
+Die Info-Box befindet sich rechts neben den restlichen Teilen des Startdiagramms in einer hellblauen Box und stellt dem Nutzer Informationen über die beiden Ringe bereit, wenn dieser mit dem Mauszeiger auf einem der Segmente ist. Dabei werden eine Frage vom äußeren Ring, die dazugehörige Antwort sowie deren prozentualer Anteil angegeben. Was angezeigt wird hängt davon ab, über welches Segment der Nutzer mehr erfahren will. 
+
+Die Darstellung als Info-Box wurde gewählt, um dem Nutzer eine zentrale Anlaufstelle zu geben, die ihm die Beschreibungen für die einzelnen Segmente der Ringe in einer angemessenen Größe liefert und möglichst nichts vom Startdiagramm verdeckt. 
+
+\subsection{Interaktionsmöglichkeiten}
+\subsubsection{Über die Ringe hovern}
+Der Nutzer hat mehrere Möglichkeiten, um mit dem Startdiagramm zu interagieren. Zu den Grundfunktionen gehört dabei das Hovern über die einzelnen Ring-Segmente. Wenn die Maus über einem Segment des äußeren Rings liegt, wird die Frage angezeigt, welche dieses Segment repräsentiert. Liegt die Maus auf einem Segment des inneren Rings werden zusätzlich zu der Frage noch eine der abgegebenen Antworten sowie die Häufigkeit dieser Antwort in Prozent innerhalb der Info-Box angezeigt. Verlässt der Nutzer einen der Ringe verschwindet der Text wieder und die Info-Box ist leer. 
+
+\subsubsection{Antworten/Segmente des inneren Rings anklicken}
+Der innere Ring stellt eine der wichtigsten Interaktionsmöglichkeiten für den Nutzer bereit. Dieser kann nämlich eine Antwort anklicken und bekommt alle Probanden, die durch die Kreise in der Mitte dargestellt werden, angezeigt, die in der Studie diese Antwort gegeben haben. Dabei ist es möglich gleich mehrere Segmente auszuwählen, woraufhin nur  Probanden/Kreise hervorgehoben werden, die alle diese Antworten in der Studie abgegeben haben. Somit kann ein Nutzer selbst untersuchen, welche Antwortkombinationen wie oft gegeben wurden und ob bestimmte Kombinationen überhaupt vorkommen. Alle vom Nutzer ausgewählten Segmente des inneren Rings werden dabei farblich von den restlichen Segmenten abgegrenzt, damit man immer weiß, welche Segmente man gerade ausgewählt hat. Ausgewählte Antworten kann man mit einem erneuten Klick darauf wieder abwählen. Ist keine Antwort ausgewählt oder falls kein Teilnehmer eine bestimmte Kombination aufweist, sind alle Kreise dunkelblau und somit inaktiv. 
+
+\subsubsection{Zoom für inneren Ring}
+Da einige der Antworten nur von wenigen Probanden gegeben wurden, erscheinen diese als sehr kleine Segmente des inneren Rings. Um diese besser sehen und für andere Interaktionsmöglichkeiten anklicken zu können, wurde ein Zoom eingebaut, mit dem man den inneren Ring mit Hilfe des Mausrads oder anderen entsprechenden Eingabemöglichkeiten vergrößern und wieder verkleinern kann. Der innere Ring kann dabei auch per Drag-and-Drop bewegt werden, falls der Zoom den restlichen Ring beim verkleinern verschiebt oder falls man andere Segmente bei der aktuellen Zoomgröße untersuchen will. 
+
+\subsubsection{Probanden-Kreise anklicken}
+Die Probanden-Kreise ermöglichen es für jeden Probanden dessen Antworten anzeigen zu lassen, indem der Nutzer auf einen der Kreise klickt. Daraufhin werden alle Segmente des inneren Rings, die den Antworten entsprechen, die der Nutzer angeklickt hat, farblich markiert. Somit ist es möglich, durch das Hovern über die markierte Segmente zu erfahren, welche Antworten dieser Proband gegeben hat. Die farbliche Darstellung vermeidet eine zu große Informationsflut an textueller Information, da einige der Fragen und Antworten sehr lang sind. Der aktuell ausgewählte Proband/Kreis wird in diesem Fall farblich hellblau hervorgehoben, während alle anderen Kreise inaktiv und somit dunkelblau werden.
 
 \section{Bubblediagramme}
 Nachdem das Startdiagramm einen Überblick über die Daten geben sollte, geben die Bubblediagramme die Möglichkeit die in \ref{Datensatz} beschriebenen Kategorien genauer und interaktiv zu erforschen.
@@ -193,6 +228,12 @@ Auf der Unterseite \textit{Seat Reclining} stehen folgende zwei Sonderfilter zur
 \end{itemize} 
 
 \section{Aufteilung}
-
+Kevin Angermeyer (Verantwortlich für das komplette Startdiagramm):
+\begin{itemize}
+\item Startdiagramm-Konzept testen und umsetzen
+\item Kompletter Code für StartDiagramManager, StartDiagramController und StartDiagramModel 
+\item Kleinere Anpassungen an der css- sowie index-Datei
+\item Visuelle Darstellung des Startdiagramms auf der Startseite
+\end{itemize}
 
 \end{document}
