added start description for windows

--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -29,15 +29,24 @@
 \maketitle
 
 \section{Das Projekt starten} \label{Das Projekt starten}
-\subsection{Unix}
+
 \textbf{Was wird benötigt?}\newline
 Python\newline\newline
+\subsection{Unix}
 \textbf{Wie wird das Projekt gestartet?}\newline
-1. Über das Terminal zum Projekt navigieren\newline
-2. Im Projekt durch den Befehl\newline 
+\begin{enumerate}
+\item Über das Terminal zum Projekt navigieren
+\item Im Projekt durch den Befehl\newline 
 \textit{python -m SimpleHTTPServer}\newline
-den Server starten.\newline
-3. im Browser auf localhost:8000 wechseln.
+den Server starten.
+\item im Browser auf localhost:8000 wechseln.
+\end{enumerate}
+\subsection{Windows}
+\textbf{Wie wird das Projekt gestartet?}\newline
+\begin{enumerate}
+\item Run.bat mit Doppelklick in der Kommandozeile starten 
+\item im Browser auf localhost:8000 wechseln.
+\end{enumerate}
 
 \section{Datensatz} \label{Datensatz}
 Bei dem Datensatz handelt es sich um den Datensatz \textit{flying-etiquette-survey} von \textit{\href{https://github.com/fivethirtyeight/data/tree/master/flying-etiquette-survey}{fivethirtyeight}}. Die Daten stammen aus einer Online-Umfrage, welche mit \href{https://www.surveymonkey.com/mp/audience/}{SurveyMonkey}, am 29. und 30. August 2014 durchgeführt wurde. Insgesamt nahmen 1040 Probanden an der Studie teil. Nach einer Säuberung der Daten, bei der alle Teilnehmer die angaben nie zu fliegen und daher die anderen Fragen zum Thema Fliegen nicht beantwortet hatten, entfernt wurden, blieben Daten von 856 Probanden übrig. 
