--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -44,7 +44,7 @@ den Server starten.
 \subsection{Windows}
 \textbf{Wie wird das Projekt gestartet?}\newline
 \begin{enumerate}
-\item Run.bat mit Doppelklick in der Kommandozeile starten 
+\item die Datei Run.bat mit Doppelklick in der Kommandozeile starten 
 \item im Browser auf localhost:8000 wechseln.
 \end{enumerate}
 
