added link to repository

--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -237,6 +237,9 @@ Auf der Unterseite \textit{Seat Reclining} stehen folgende zwei Sonderfilter zur
 \end{itemize} 
 
 \section{Aufteilung}
+Link zum Git-Hub Repository: \newline
+\href{https://github.com/RiaRentnueg/IV_SoSe18_flying-etiquette}{https://github.com/RiaRentnueg/IV\_SoSe18\_flying-etiquette}
+\linebreak \newline
 Kevin Angermeyer (Verantwortlich für das komplette Startdiagramm):
 \begin{itemize}
 \item Startdiagramm-Konzept testen und umsetzen
