--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -29,24 +29,15 @@
 \maketitle
 
 \section{Das Projekt starten} \label{Das Projekt starten}
-
+\subsection{Unix}
 \textbf{Was wird benötigt?}\newline
 Python\newline\newline
-\subsection{Unix}
 \textbf{Wie wird das Projekt gestartet?}\newline
-\begin{enumerate}
-\item Über das Terminal zum Projekt navigieren
-\item Im Projekt durch den Befehl\newline 
+1. Über das Terminal zum Projekt navigieren\newline
+2. Im Projekt durch den Befehl\newline 
 \textit{python -m SimpleHTTPServer}\newline
-den Server starten.
-\item im Browser auf localhost:8000 wechseln.
-\end{enumerate}
-\subsection{Windows}
-\textbf{Wie wird das Projekt gestartet?}\newline
-\begin{enumerate}
-\item die Datei Run.bat mit Doppelklick in der Kommandozeile starten 
-\item im Browser auf localhost:8000 wechseln.
-\end{enumerate}
+den Server starten.\newline
+3. im Browser auf localhost:8000 wechseln.
 
 \section{Datensatz} \label{Datensatz}
 Bei dem Datensatz handelt es sich um den Datensatz \textit{flying-etiquette-survey} von \textit{\href{https://github.com/fivethirtyeight/data/tree/master/flying-etiquette-survey}{fivethirtyeight}}. Die Daten stammen aus einer Online-Umfrage, welche mit \href{https://www.surveymonkey.com/mp/audience/}{SurveyMonkey}, am 29. und 30. August 2014 durchgeführt wurde. Insgesamt nahmen 1040 Probanden an der Studie teil. Nach einer Säuberung der Daten, bei der alle Teilnehmer die angaben nie zu fliegen und daher die anderen Fragen zum Thema Fliegen nicht beantwortet hatten, entfernt wurden, blieben Daten von 856 Probanden übrig. 
@@ -123,6 +114,22 @@ Anschließend wurde der Datensatz in verschiedene Kategorien aufgeteilt, denen f
 
 \end{enumerate}
 
+\section{Projektmanagement}
+Zur Organisation des Projekts wurde die Plattform Github in Kombination mit Git verwendet. In einer der ersten Gruppentreffen, wurde der \textit{Issuetracker} mit \textit{Tickets} befüllt und geschätzt wie viel Zeit die einzelnen Tickets benötigen. 
+Daraufhin wurde noch ein \textit{Project} auf Github angelegt mit den Spalten:
+\begin{itemize}
+\item \textbf{Queue: } Hier befinden sich alle \textit{Tickets}, die noch bearbeitet werden müssen
+\item \textbf{Blocker: } Hier befinden sich alle \textit{Tickets}, die höchste Priorität haben, da diese den weiteren Fortschritt blockieren
+\item \textbf{In Progress: } Hier befinden sich alle \textit{Tickets}, die gerade bearbeitet werden.
+\item \textbf{Code Review: } Hier befinden sich alle \textit{Tickets}, für die ein offener \textit{Pull-Request} existiert, der von den anderen Projektbeteiligten angesehen werden muss.
+\item \textbf{Needs Testing: } Hier befinden sich alle \textit{Tickets}, die getestet werden müssen.
+\item \textbf{Queue: } Hier befinden sich alle \textit{Tickets}, die fertig sind.
+\newline \newline
+\end{itemize}
+Offene \textit{Pull-Requests} wurden immer erst gemerged, wenn diese von einem anderen Projektmitglied angeschaut und akzeptiert wurden. 
+In den wöchentlichen Gruppentreffen, wurden die \textit{Tickets}
+auf die Mitglieder aufgeteilt.
+
 \section{Startdiagramm}
 Das Startdiagramm soll dem Nutzer ermöglichen, selbstständig sowie umfassend den Datensatz zu erkunden. Es besteht aus mehreren einzelnen Diagrammen, die zusammen als eine svg-Datei auf der Startseite dargestellt werden. Dadurch kann man auf einen Blick mehrere Aspekte des Datensatzes visuell abbilden. Ferner kann der Nutzer somit ohne Umwege mit einem Großteil der Daten interagieren. Der Unterschied zu den Bubble-Diagrammen auf den Unterseiten besteht darin, dass im Startdiagramm alle Aspekte des Datensatzes dargestellt werden, der Detailgrad und die Filteroptionen sind allerdings nicht in dem gleichen Ausmaß gegeben. Insgesamt besteht das Startdiagramm aus vier Segmenten (Äußerer Ring, Innerer Ring, Teilnehmer-Kreise und Info-Box), die zur besseren Übersicht in diesem Text einzeln erläutert werden. Des Weiteren werden die Interaktionsmöglichkeiten  mit dem Startdiagramm ebenfalls im Detail erläutert.
 
@@ -163,14 +170,28 @@ Die Probanden-Kreise ermöglichen es für jeden Probanden dessen Antworten anzei
 Nachdem das Startdiagramm einen Überblick über die Daten geben sollte, geben die Bubblediagramme die Möglichkeit die in \ref{Datensatz} beschriebenen Kategorien genauer und interaktiv zu erforschen.
 Die Wahl fiel auf Bubblediagramme, da der Nutzer hier auf einen Blick die Verhältnisse der gegebenen Antworten sehen kann. Die Größe der Bubbles spiegelt nämlich immer die Anzahl der gegeben Antwort wider. Über den Bubbles befinden sich alle möglichen Antworten. Diese sind durch Linien mit der zugehörigen Bubble verbunden. Wenn der Nutzer über die Bubbles hovert, erscheint auf diesen die Anzahl der gegebenen Antworten und die Anzahl aller Antworten. So steht dem Nutzer neben der visuellen Größe der Bubbles, noch ein Zahlenwert zur Verfügung. 
 
-Für jede Kategorie gibt es eine eigene Unterseite. Auf diesen befinden sich jeweils zwei bis drei Bubblediagramme, welche die Fragen der Kategorien repräsentieren. Jede Bubble steht für eine Antwort, die auf die jeweilige Frage geben werden konnte. 
+Für jede Kategorie gibt es eine eigene Unterseite. Auf diesen befinden sich jeweils zwei bis drei Bubblediagramme, welche die Fragen der Kategorien repräsentieren. Jede Bubble steht für eine Antwort, die auf die jeweilige Frage geben werden konnte (Abbildung \ref{ScSwitchingSeats}). 
+\begin{figure}
+\includegraphics[scale=0.5]{assets/filter_standard.png}
+\caption{Screenshot der Unterseite \textit{Switching Seats} mit Standard-Filtern}
+\label{ScSwitchingSeats}
+\end{figure}
 
 \subsection{Filter}
-Die Bubblediagramme können mit Hilfe von Filtern verändert werden. Diese befinden sich jeweils rechts der Diagramme. Die Filter sind durch Icons und im Falle der Dropdown-Filter, durch einen kurzen Text gekennzeichnet. Die Wahl fiel auf Icons, da der Nutzer so sofort die Funktionalität des Filters erfassen kann. Ist das Icon aber trotzdem nicht eindeutig genug, kann der Nutzer zusätzlich über die Filter hovern und erhält dann eine genauere Erklärung, für was der jeweilige Filter steht. 
+Die Bubblediagramme können mit Hilfe von Filtern explorativ erforscht werden. Diese befinden sich jeweils rechts der Diagramme. Die Filter sind durch Icons und im Falle der Dropdown-Filter, durch einen kurzen Text gekennzeichnet. Die Wahl fiel auf Icons, da der Nutzer so sofort die Funktionalität des Filters erfassen kann. Ist das Icon aber trotzdem nicht eindeutig genug, kann der Nutzer zusätzlich über die Filter hovern und erhält dann eine genauere Erklärung, für was der jeweilige Filter steht. 
 
-Werden die Filter gesetzt, passt sich die Größe der Bubbles an die Anzahl der gegebenen Antworten an. Das heißt die Bubbles sind anteilig immer so groß, wie die Anzahl der gegebenen Antworten. Das stellt sicher, dass der Nutzer auf einen Blick die Verhältnisse wahrnehmen kann.  
-
-Es wird zwischen Standardfilter und speziellen Filtern, die nicht bei allen Diagrammen zur Verfügung stehen, unterschieden. Die Entscheidung spezielle Filter einzuführen fiel, da bestimmte Filter nur bei manchen Fragen Sinn machen. So macht es beispielsweise nur Sinn die Größe der befragten Person mit einzubeziehen, wenn absehbar ist, dass die Antwort auf eine Frage durch die Größe beeinflusst wird. So beispielsweise bei der Frage, wie unhöflich es ist, den Sitz im Flugzeug zurückzulehnen. Man kann davon ausgehen, dass es für größere Personen mit längeren Beinen wesentlich unangenehmer ist, wenn die Person vor ihm den Sitz zurücklehnt. Deshalb kann es sein, dass die Antwort durch die Größe beeinflusst wird.
+Werden die Filter gesetzt, passt sich die Größe der Bubbles an die Anzahl der gegebenen Antworten an. Das heißt die Bubbles sind anteilig immer so groß, wie die Anzahl der gegebenen Antworten. Das stellt sicher, dass der Nutzer auf einen Blick die Verhältnisse wahrnehmen kann (Abbildung \ref{ScSwitchingSeatsActive}).  
+\begin{figure}
+\includegraphics[scale=0.5]{assets/filter_standard_active.png}
+\caption{Screenshot der Unterseite \textit{Switching Seats} mit aktiven Standard-Filtern}
+\label{ScSwitchingSeatsActive}
+\end{figure}
+Es wird zwischen Standardfilter und speziellen Filtern, die nicht bei allen Diagrammen zur Verfügung stehen, unterschieden. Die Entscheidung spezielle Filter einzuführen fiel, da bestimmte Filter nur bei manchen Fragen Sinn machen. So macht es beispielsweise nur Sinn die Größe der befragten Person mit einzubeziehen, wenn absehbar ist, dass die Antwort auf eine Frage durch die Größe beeinflusst wird. Das ist beispielsweise bei der Frage der Fall, bei der erfasst wurde, wie unhöflich es ist, den Sitz im Flugzeug zurückzulehnen. Man kann davon ausgehen, dass es für größere Personen mit längeren Beinen wesentlich unangenehmer ist, wenn die Person vor ihr den Sitz zurücklehnt. Deshalb kann es bei dieser Frage sein, dass die Größe der befragten Person Einfluss auf die Antwort hat (Abbildung \ref{ScSeatRecliningActive}).
+\begin{figure}
+\includegraphics[scale=0.5]{assets/filter_seat_active.png}
+\caption{Screenshot der Unterseite \textit{Seat Reclining} mit aktivem Größen-Filter}
+\label{ScSeatRecliningActive}
+\end{figure}
 
 Folgende Standardfilter stehen bei allen Diagrammen zur Verfügung:
 \begin{itemize}
@@ -237,9 +258,6 @@ Auf der Unterseite \textit{Seat Reclining} stehen folgende zwei Sonderfilter zur
 \end{itemize} 
 
 \section{Aufteilung}
-Link zum Git-Hub Repository: \newline
-\href{https://github.com/RiaRentnueg/IV_SoSe18_flying-etiquette}{https://github.com/RiaRentnueg/IV\_SoSe18\_flying-etiquette}
-\linebreak \newline
 Kevin Angermeyer (Verantwortlich für das komplette Startdiagramm):
 \begin{itemize}
 \item Startdiagramm-Konzept testen und umsetzen
