--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -1,6 +1,8 @@
 \documentclass{mi-seminar}
 
 \usepackage{hyperref}
+\usepackage{graphicx}
+\usepackage[T1]{fontenc}
 
 \title{Flying Etiquette}
 %\subtitle{Dokumentation zum Projekt Informationsvisualisierung}
