Text improvements project managment

--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -120,7 +120,7 @@ Anschließend wurde der Datensatz in verschiedene Kategorien aufgeteilt, denen f
 \end{enumerate}
 
 \section{Projektmanagement}
-Zur Organisation des Projekts wurde die Plattform Github in Kombination mit Git verwendet. In einer der ersten Gruppentreffen, wurde der \textit{Issuetracker} mit \textit{Tickets} befüllt und geschätzt wie viel Zeit die einzelnen Tickets benötigen. 
+Zur Organisation des Projekts wurde die Plattform Github in Kombination mit Git verwendet. In einer der ersten Gruppentreffen, wurde der \textit{Issuetracker} mit \textit{Tickets} befüllt und geschätzt wie viel Zeit die einzelnen \textit{Tickets} benötigen. 
 Daraufhin wurde noch ein \textit{Project} auf Github angelegt mit den Spalten:
 \begin{itemize}
 \item \textbf{Queue: } Hier befinden sich alle \textit{Tickets}, die noch bearbeitet werden müssen
@@ -131,6 +131,9 @@ Daraufhin wurde noch ein \textit{Project} auf Github angelegt mit den Spalten:
 \item \textbf{Queue: } Hier befinden sich alle \textit{Tickets}, die fertig sind.
 \newline \newline
 \end{itemize}
+Link zum Github Repository:\newline
+\href{https://github.com/RiaRentnueg/IV_SoSe18_flying-etiquette}{https://github.com/RiaRentnueg/IV\_SoSe18\_flying-etiquette}
+\linebreak \newline
 Offene \textit{Pull-Requests} wurden immer erst gemerged, wenn diese von einem anderen Projektmitglied angeschaut und akzeptiert wurden. 
 In den wöchentlichen Gruppentreffen, wurden die \textit{Tickets}
 auf die Mitglieder aufgeteilt.
