\newPage after first page

--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -31,7 +31,8 @@
 \begin{document}
 
 \maketitle
-\vspace*{2.5cm}
+\newpage
+
 \section{Das Projekt starten} \label{Das Projekt starten}
 Um das Projekt zu starten muss \textit{Python} installiert sein.
 \subsection{Unix}
