--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -47,13 +47,13 @@ Um das Projekt zu starten muss \textit{Python} installiert sein.
 \textbf{Wie wird das Projekt gestartet?}\newline
 \begin{enumerate}
 \item Über das Terminal zum Projekt navigieren
-\item Im Projekt durch den Befehl \textit{python -m SimpleHTTPServer} den Server starten.\newline
+\item Im Projekt durch den Befehl \textit{python -m SimpleHTTPServer} den Server starten.
 \item Im Browser auf localhost:8000 wechseln.
 \end{enumerate}
 \subsection{Windows}
 \textbf{Wie wird das Projekt gestartet?}\newline
 \begin{enumerate}
-\item Die Datei Run.bat mit Doppelklick in der Kommandozeile starten 
+\item Die Datei Run.bat mit Doppelklick starten (Kommandozeile sollte sich öffnen)
 \item Im Browser auf localhost:8000 wechseln.
 \end{enumerate}
 
@@ -305,7 +305,7 @@ Auf der Unterseite \textit{Seat Reclining} stehen folgende zwei Sonderfilter zur
 \end{itemize} 
 
 \section{Aufteilung}
-Link zum Git-Hub Repository: \newline
+Link zum GitHub Repository: \newline
 \href{https://github.com/RiaRentnueg/IV_SoSe18_flying-etiquette}{https://github.com/RiaRentnueg/IV\_SoSe18\_flying-etiquette}
 \linebreak \newline
 \definecolor{lightgray}{rgb}{0.93, 0.93, 0.93}
